--- a/django_lv3/forms_app/templates/forms_app/contatto.html
+++ b/django_lv3/forms_app/templates/forms_app/contatto.html
@@ -11,9 +11,22 @@
 <body>
     <div class="container">
         <h3>compila il form di contatto </h3>
-        <form action="" method="post">
+
+        <!-- <form action="" method="post">
             {% csrf_token %}
             {{ form.as_p }}
+             <input type="submit" class="btn btn-info" value="INVIA"> 
+        </form> -->
+
+        <form action="" method="post">
+            {% csrf_token %}
+            {% for field in form %}
+                <div class="form-group">
+                    {{ field.errors }}
+                    {{ field.label_tag }}
+                    {{ field }}
+                </div>
+            {% endfor %}
             <input type="submit" class="btn btn-info" value="INVIA">
         </form>
         
